<resources xmlns:tools="http://schemas.android.com/tools">
    <plurals name="offline_notification_count">
        <item quantity="one">You have 1 offline product waiting to be contributed to Open Food Facts</item>
        <item quantity="other">You have %d offline products waiting to be contributed to Open Food Facts</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="one">%d second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="action_about">About</string>
    <string name="action_discover">Discover</string>
    <string name="contribute">How to contribute</string>
    <string name="action_find">Find</string>
    <string name="product_incomplete_message">The ingredient list of this product is not complete. As a result, the allergen alert is not shown.</string>
    <string name="product_allergen_prompt">This product contains:</string>
    <string name="no_offline_data">You\'re all done</string>
    <string name="first_offline">Products added offline will appear here</string>
    <string-array name="upload_image" translatable="false">
        <item>640 X 480</item>
        <item>1024 X 768</item>
        <item>1152 X 864</item>
        <item>1600 X 1200</item>
    </string-array>
    <string-array name="nav_drawer_items_product">
        <item>Summary</item>
        <item>Ingredients</item>
        <item>Nutrition</item>
        <item>Nutrition Table</item>
        <item>Environment</item>
    </string-array>
    <string-array name="nav_drawer_new_items_product">
        <item>Product Photos</item>
        <item>Ingredient Analysis</item>
    </string-array>
    <string-array name="weights_array" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>l</item>
        <item>cl</item>
    </string-array>
    <string name="kcal" translatable="false">kcal</string>
    <string name="kj" translatable="false">kJ</string>
    <string-array name="energy_units" translatable="false">
        <item>@string/kcal</item>
        <item>@string/kj</item>
    </string-array>
    <string-array name="volume_units" translatable="false">
        <item>l</item>
        <item>oz</item>
    </string-array>
    <string-array name="nutrition_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
    </string-array>
    <string-array name="nutrition_serving_weight_units" translatable="false">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>l</item>
        <item>ml</item>
    </string-array>
    <string-array name="weight_all_units">
        <item>g</item>
        <item>mg</item>
        <item>µg</item>
        <item>% DV</item>
        <item>IU</item>
    </string-array>
    <string-array name="nutrition_comparison_units" translatable="false">
        <item>=</item>
        <item>&lt;</item>
        <item>&gt;</item>
    </string-array>
    <string-array name="application_theme_entries">
        <item>@string/follow_system</item>
        <item>@string/day</item>
        <item>@string/night</item>
    </string-array>
    <string-array name="nutrients_array">
        <item>Alpha-linolenic acid / ALA (18:3 n-3)</item>
        <item>Arachidic acid (20:0)</item>
        <item>Arachidonic acid / AA / ARA (20:4 n-6)</item>
        <item>Behenic acid (22:0)</item>
        <item>Bicarbonate</item>
        <item>Biotin</item>
        <item>Butyric acid (4:0)</item>
        <item>Caffeine</item>
        <item>Calcium</item>
        <item>Capric acid (10:0)</item>
        <item>Caproic acid (6:0)</item>
        <item>Caprylic acid (8:0)</item>
        <item>Casein</item>
        <item>Cerotic acid (26:0)</item>
        <item>Chloride</item>
        <item>Cholesterol</item>
        <item>Chromium</item>
        <item>Copper</item>
        <item>Dihomo-gamma-linolenic acid / DGLA (20:3 n-6)</item>
        <item>Docosahexaenoic acid / DHA (22:6 n-3)</item>
        <item>Eicosapentaenoic acid / EPA (20:5 n-3)</item>
        <item>Elaidic acid (18:1 n-9)</item>
        <item>Erucic acid (22:1 n-9)</item>
        <item>Fluoride</item>
        <item>Fructose</item>
        <item>Gamma-linolenic acid / GLA (18:3 n-6)</item>
        <item>Glucose</item>
        <item>Gondoic acid (20:1 n-9)</item>
        <item>Iodine</item>
        <item>Iron</item>
        <item>Lactose</item>
        <item>Lauric acid (12:0)</item>
        <item>Lignoceric acid (24:0)</item>
        <item>Linoleic acid / LA (18:2 n-6)</item>
        <item>Magnesium</item>
        <item>Maltodextrins</item>
        <item>Maltose</item>
        <item>Manganese</item>
        <item>Mead acid (20:3 n-9)</item>
        <item>Melissic acid (30:0)</item>
        <item>Molybdenum</item>
        <item>Monounsaturated fat</item>
        <item>Montanic acid (28:0)</item>
        <item>Myristic acid (14:0)</item>
        <item>Nervonic acid (24:1 n-9)</item>
        <item>Nucleotides</item>
        <item>Oleic acid (18:1 n-9)</item>
        <item>Omega 3 fatty acids</item>
        <item>Omega 6 fatty acids</item>
        <item>Omega 9 fatty acids</item>
        <item>Palmitic acid (16:0)</item>
        <item>Pantothenic acid / Pantothenate (Vitamin B5)</item>
        <item>pH</item>
        <item>Phosphorus</item>
        <item>Sugar alcohols (Polyols)</item>
        <item>Polyunsaturated fat</item>
        <item>Potassium</item>
        <item>Selenium</item>
        <item>Serum proteins</item>
        <item>Silica</item>
        <item>Starch</item>
        <item>Stearic acid (18:0)</item>
        <item>Sucrose</item>
        <item>Taurine</item>
        <item>Trans fat</item>
        <item>Vitamin A</item>
        <item>Vitamin B1 (Thiamin)</item>
        <item>Vitamin B12 (Cobalamin)</item>
        <item>Vitamin B2 (Riboflavin)</item>
        <item>Vitamin B3 / Vitamin PP (Niacin)</item>
        <item>Vitamin B6 (Pyridoxin)</item>
        <item>Vitamin B9 (Folic acid)</item>
        <item>Vitamin C (Ascorbic acid)</item>
        <item>Vitamin D</item>
        <item>Vitamin E</item>
        <item>Vitamin K</item>
        <item>Zinc</item>
    </string-array>
    <string name="Donate">Donate</string>
    <string name="Donation">Click here to donate to Open Food Facts</string>
    <string name="txtSignIn">Sign in</string>
    <string name="hintLogin">Login</string>
    <string name="hintPass">Password</string>
    <string name="create_account">Sign up</string>
    <string name="home_drawer">Home</string>
    <string name="your_lists">Your lists</string>
    <string name="prefs_scan_startup">Scan on startup</string>
    <string name="prefs_scan_startup_summary">This option if selected will start scan when app is opened.</string>
    <string name="prefs_power_mode">Power mode scan</string>
    <string name="prefs_power_mode_summary">Quickly scan products in a supermarket to see which ones are not in the database.</string>
    <string name="prefs_language">Language</string>
    <string name="prefs_language_summary">Change language</string>
    <string name="clear_history">Clear history</string>
    <string name="export_csv_history">Export CSV</string>
    <string name="nutrition_header">Nutrition facts</string>
    <string name="for_100g">For 100 g</string>
    <string name="serving">Per serving</string>
    <string name="disabled_message">The shortcut is not available.</string>
    <string name="scan_shortcut_short_label">Scan</string>
    <string name="scan_shortcut_long_label">Scan Product</string>
    <string name="barcode_shortcut_short_label">Search</string>
    <string name="barcode_shortcut_long_label">Search by barcode</string>
    <string name="history_shortcut_short_label">History</string>
    <string name="history_shortcut_long_label">History</string>
    <string name="contributions_shortcut_short_label">Contributions</string>
    <string name="contributions_shortcut_long_label">My contributions</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Contact the team</string>
    <string name="preference_enable_mobile_data_title">Upload on mobile data</string>
    <string name="preference_enable_mobile_data_summary_on">Upload new products using mobile data &amp; WiFi</string>
    <string name="preference_enable_mobile_data_summary_off">Upload new products using WiFi only</string>
    <string name="preference_choose_language_dialog_title">Choose language</string>
    <string name="FAQ">FAQ</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="translate_help_title">Help translate Open Food Facts</string>
    <string name="translate_help_summary">Bring Open Food Facts to your language - no technical knowledge required</string>
    <string name="compare_products">Compare products</string>
    <string name="Terms">Terms</string>
    <string name="TermsOfUse">Terms and Privacy</string>
    <string name="donation_url">https://donate.openfoodfacts.org</string>
    <string name="wikidata_information">Going further</string>
    <string name="Wikipedia">View on Wikipedia</string>
    <string name="Browse_Products">Browse Products</string>
    <string name="by_title">Title</string>
    <string name="by_brand">Brand</string>
    <string name="by_barcode">Barcode</string>
    <string name="by_time">Recently Viewed</string>
    <string name="sort">Sort</string>
    <string name="by_nutrition_grade">Nutrition Grade</string>
    <string name="bottomNav_history">History</string>
    <string name="trouble_scanning">Trouble Scanning?</string>
    <string name="switch_camera">Switch camera</string>
    <string name="autofocus">Autofocus</string>
    <string name="title_activity_product">Title</string>
    <string name="description_activity_product">description</string>
    <string name="set_ingredient_img">Set image as Ingredient</string>
    <string name="set_img_nutrients">Set Image as Nutrition</string>
    <string name="set_img_front">Set Image as Front</string>
    <string name="set_img_recycling">Set Image as Recycling</string>
    <string name="report_img">Report Image</string>
    <string name="product_summary_action_compare_button_label">Compare</string>
</resources>