<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="startScan"
        android:summary="@string/prefs_scan_startup_summary"
        android:title="@string/prefs_scan_startup" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="powerMode"
        android:summary="@string/prefs_power_mode_summary"
        android:title="@string/prefs_power_mode" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enableMobileDataUpload"
        android:summaryOff="@string/preference_enable_mobile_data_summary_off"
        android:summaryOn="@string/preference_enable_mobile_data_summary_on"
        android:title="@string/preference_enable_mobile_data_title" />

    <ListPreference
        android:defaultValue="en"
        android:dialogTitle="@string/preference_choose_language_dialog_title"
        android:key="Locale.Helper.Selected.Language"
        android:summary="@string/prefs_language_summary"
        android:title="@string/prefs_language" />
    <Preference
        android:summary="@string/Donation"
        android:title="@string/Donate">
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/donation_url" />
    </Preference>

    <Preference
        android:key="@string/contact_key"
        android:summary="@string/contact_summary"
        android:title="@string/contact" />

    <Preference
           android:title="@string/FAQ"
            android:summary="@string/FrequentlyAskedQuestions"
            android:key="@string/FAQ"/>
           <Preference android:title="@string/translate_help_title"
        android:key="@string/lang_translate"
        android:summary="@string/translate_help_summary"/>
    <Preference

        android:title="@string/Terms"
        android:summary="@string/TermsOfUse"
        android:key="@string/Terms"/>

</PreferenceScreen>