<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/set_ingredient_image"
        android:title="@string/set_ingredient_img" />

    <item
        android:id="@+id/set_nutrition_image"
        android:title="@string/set_img_nutrients" />

    <item
        android:id="@+id/set_front_image"
        android:title="@string/set_img_front" />

    <item
        android:id="@+id/set_recycling_image"
        android:title="@string/set_img_recycling" />

    <item
        android:id="@+id/report_image"
        android:icon="@drawable/ic_baseline_report_24"
        android:title="@string/report_img" />
=======
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/set_ingredient_image"
        android:title="@string/set_ingredient_img"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/set_nutrition_image"
        android:title="@string/set_img_nutrients"
        app:showAsAction="ifRoom" />

    <item

        android:id="@+id/set_front_image"
        android:title="@string/set_img_front"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report_image"
        android:title="@string/report_img"
        app:showAsAction="ifRoom" />
>>>>>>> b73375553e6727f1ebb0cf7dd743c16efdcd16ac


</menu>