<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016-2020 Open Food Facts
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    app:showAsAction="always|withText">
    <item
        android:id="@+id/scan_bottom_nav"
        android:icon="@drawable/barcode_white_24dp"
        android:title="@string/scan_shortcut_short_label"/>

    <item
        android:id="@+id/compare_products"
        android:icon="@drawable/ic_compare_arrows_black_18dp"
        android:title="@string/product_summary_action_compare_button_label"/>


    <item
        android:id="@+id/home_page"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_drawer"/>


    <item
        android:id="@+id/history_bottom_nav"
        android:icon="@drawable/ic_history_grey_24dp"
        android:title="@string/bottomNav_history"/>

    <item
        android:id="@+id/my_lists"
        android:icon="@drawable/playlist_add"
        android:title="@string/your_lists"/>
</menu>
