<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:background="@drawable/edittext_top"
        android:drawableLeft="@drawable/ic_user_grey"
        android:drawablePadding="10dip"
        android:ems="10"
        android:hint="@string/hintLogin"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="10dip" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:background="@drawable/edittext_bottom"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="10dip"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dip" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        android:background="@drawable/button_default_bg"
        android:gravity="center"
        android:text="@string/txtSignIn" />

    <Button
        android:id="@+id/buttonCreateAccount"
        style="@style/DefaultButtonText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/spacing_normal"
        android:background="@drawable/button_default_bg"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/textInfoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/font_small" />

</LinearLayout>
