<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nutriment_header"
    android:orientation="horizontal"
    android:columnCount="5"
    android:rowCount="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nutriment_name"
        android:textSize="@dimen/font_normal"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/nutrition_header" />

    <TextView
        android:id="@+id/nutriment_value"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="end"
        android:text="@string/for_100g"
        android:layout_width="60dp" />

    <TextView
        android:id="@+id/nutriment_serving_value"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="end"
        android:text="@string/serving"
        android:layout_width="60dp" />

</GridLayout>