<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.simplescan.SimpleScanActivity">

    <ViewStub
        android:id="@+id/scan_ml_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/scan_flash_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/spacing_small"
        android:background="?android:selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_off_white_24dp"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/scan_flip_camera_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/spacing_small"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/switch_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_flip_camera_android_24" />

    <ImageButton
        android:id="@+id/scan_change_focus_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/spacing_small"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/autofocus"
        app:layout_constraintEnd_toStartOf="@+id/scan_flip_camera_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_camera_focus_on_24" />

    <Button
        android:id="@+id/trouble_scanning_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:background="?android:selectableItemBackground"
        android:text="@string/trouble_scanning"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>